--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,62 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F0F0F0"
-    android:fillViewport="true">
-
-
+    android:padding="0dp">
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
-        <!-- Top navigation bar -->
-        <RelativeLayout
-            android:id="@+id/top_navigation"
+        android:padding="0dp">
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:padding="0dp">
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:background="@color/mainbutton">
 
             <ImageButton
                 android:id="@+id/btnBack"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:layout_alignParentStart="true"
+                android:layout_gravity="start"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@mipmap/back" />
 
             <TextView
-                android:id="@+id/tvHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ACCOUNT"
-                android:layout_centerInParent="true"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <ImageButton
-                android:id="@+id/btnSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:src="@mipmap/search"
-                android:background="?attr/selectableItemBackgroundBorderless" />
-
-            <ImageButton
-                android:id="@+id/btnNewButton"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@id/tvHeader"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@mipmap/search" />
-        </RelativeLayout>
-
+                android:gravity="center"
+                android:text="ACCOUNT"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,7 +41,7 @@
             android:orientation="vertical"
             android:elevation="4dp"
             android:padding="8dp"
-            android:background="#FFFFFF"
+            android:background="#F0F0F0"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="24dp">
 
@@ -73,39 +50,44 @@
                 android:layout_height="wrap_content"
                 android:text="Account information"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
-            <TextView
+            <EditText
+                android:id="@+id/etFullName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Full name: Le Van An"
-                android:layout_marginTop="16dp"/>
+                android:hint="Fullname"
+                android:layout_marginTop="16dp" />
 
-            <TextView
+            <EditText
+                android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Email: ann@gmail.com"
-                android:layout_marginTop="8dp"/>
+                android:hint="Email"
+                android:layout_marginTop="8dp" />
 
-            <TextView
+            <EditText
+                android:id="@+id/etAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Address: 669 Highway 1A, Linh Trung Ward Province/City: Thu Duc"
-                android:layout_marginTop="8dp"/>
+                android:hint="Address"
+                android:layout_marginTop="8dp" />
 
-            <TextView
+            <EditText
+                android:id="@+id/etPhoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Phone number: 0988727888"
-                android:layout_marginTop="8dp"/>
+                android:hint="Phone number"
+                android:layout_marginTop="8dp" />
 
             <Button
+                android:id="@+id/btnModifyAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Your Account Information"
+                android:text="Modify account button"
                 android:backgroundTint="@color/mainbutton"
                 android:textColor="@color/white"
-                android:layout_marginTop="24dp"/>
+                android:layout_marginTop="24dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -113,167 +95,50 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:elevation="4dp"
-            android:padding="10dp"
-            >
+            android:padding="10dp">
+
             <View
                 android:id="@+id/linerBelow"
                 android:layout_width="350dp"
                 android:layout_height="1dp"
                 android:background="@color/black"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
-                />
+                android:layout_marginBottom="10dp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Latest order lists"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Order ID: 12803"
                 android:textColor="@color/mainbutton"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Date: 30/04/2024"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Total: 3.500.000 D"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Payment status: Successful"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:text="Full name: Le Van An"
-                android:layout_marginTop="16dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Email: ann@gmail.com"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Address: 669 Highway 1A, Linh Trung Ward Province/City: Thu Duc"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Phone number: 0988727888"
-                android:layout_marginTop="8dp"/>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Your Account Information"
-                android:backgroundTint="@color/mainbutton"
-                android:textColor="@color/white"
-                android:layout_marginTop="24dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:elevation="4dp"
-            android:padding="10dp"
-            >
-            <View
-                android:id="@+id/lineBelow"
-                android:layout_width="350dp"
-                android:layout_height="1dp"
-                android:background="@color/black"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Latest order lists"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Order ID: 12803"
-                android:textColor="@color/mainbutton"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Date: 30/04/2024"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Total: 3.500.000 D"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Payment status: Successful"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Shipping status: Successful"
-                android:layout_marginTop="8dp"/>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Order ID: 12803"
-                android:textColor="@color/mainbutton"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Date: 30/04/2024"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Total: 3.500.000 D"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Payment status: Successful"
-                android:layout_marginTop="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Shipping status: Successful"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp" />
         </LinearLayout>
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationmenu"
             android:layout_width="match_parent"
@@ -281,9 +146,8 @@
             app:itemTextColor="@color/bottom_nav_style"
             app:itemIconTint="@color/bottom_nav_style"
             app:menu="@menu/bottom_nav_menu"
-            android:layout_gravity="end|bottom"/>
+            android:layout_gravity="end|bottom" />
 
     </LinearLayout>
 
 </ScrollView>
-
