--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,7 +35,7 @@
 
 
             <TextView
-                android:layout_width="137dp"
+                android:layout_width="138dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-light"
@@ -44,10 +44,10 @@
                 android:textSize="14sp" />
 
             <ImageView
-                android:layout_width="283dp"
+                android:layout_width="255dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:src="@mipmap/img_gucci" />
+                android:src="@drawable/poster" />
         </LinearLayout>
 
         <TextView
@@ -184,7 +184,7 @@
         app:menu="@menu/bottom_nav_menu"
         android:layout_gravity="end|bottom"
         app:itemTextColor="@color/bottom_nav_style"
-        app:itemIconTint="@color/bottom_nav_style" />"
+        app:itemIconTint="@color/bottom_nav_style" />
 
 
 </LinearLayout>
