--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -8,11 +8,22 @@
     android:padding="0dp"
     tools:context=".ProductDetailActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp">
+        <ImageView
+            android:id="@+id/img_back"
+            android:layout_width="47dp"
+            android:layout_height="37dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="70dp"
+            android:paddingEnd="16dp"
+            app:srcCompat="@drawable/ic_menu" />
+
+
 
         <ImageView
             android:id="@+id/imv_ProductThumbDetail"
@@ -29,6 +40,8 @@
             android:text="hehe"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:fontFamily="@font/recursive_bold"/>
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -94,8 +107,8 @@
             <ImageButton
                 android:id="@+id/btn_Decrease"
                 android:layout_width="48dp"
-                android:src="@drawable/ic_minus"
                 android:layout_height="wrap_content"
+                android:src="@drawable/ic_minus"
                 android:scaleType="centerInside"
                 android:padding="12dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
@@ -109,16 +122,35 @@
                 android:gravity="center_vertical"
                 android:textSize="18sp"/>
 
-
             <ImageButton
                 android:id="@+id/btn_Increase"
                 android:layout_width="48dp"
-                android:src="@drawable/ic_plus"
                 android:layout_height="wrap_content"
+                android:src="@drawable/ic_plus"
                 android:scaleType="centerInside"
                 android:padding="12dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:layout_marginEnd="16dp"/>
+
+            <RelativeLayout
+                android:id="@+id/layout_wishlist"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/img_wishlist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="16dp"
+                    android:paddingEnd="16dp"
+                    app:srcCompat="@drawable/ic_heartnoborder" />
+
+
+            </RelativeLayout>
+
+
         </LinearLayout>
 
         <Button
@@ -144,5 +176,6 @@
             android:layout_height="wrap_content"
             android:text="Đây là dòng mô tả cho mục mô tả nằm trong mô tả Đây là dòng"
             android:textSize="18dp" />
+
     </LinearLayout>
 </ScrollView>
