--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/button_background"
-    tools:context=".MainActivity">
+    tools:context=".CartActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -30,29 +30,20 @@
             android:textSize="20sp" />
     </FrameLayout>
 
-    <CheckBox
-        android:id="@+id/chk_All"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="All"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginEnd="10dp"/>
-
-    <ListView
-        android:id="@+id/lv_GioHang"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_GioHang"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="20dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="@drawable/button_background"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/mainbutton"
+        android:background="@drawable/button_background"
         android:layout_marginBottom="5dp"
         android:gravity="end">
         <TextView
@@ -60,50 +51,46 @@
             android:layout_height="wrap_content"
             android:text="COST: "
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/red"
             android:textSize="20sp"
             android:gravity="end" />
         <TextView
-            android:id="@+id/txt_Sum"
+            android:id="@+id/txt_Cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingEnd="10dp"
             android:text="250.000 D"
             android:textSize="20sp"
-            android:textColor="@color/black"
+            android:textColor="@color/red"
             android:gravity="end" />
     </LinearLayout>
-
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/mainbutton"
+        android:background="@drawable/button_background"
         android:layout_marginVertical="5dp"
         android:gravity="end">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TOTAL PAYMENT: "
-            android:textColor="@color/black"
+            android:textColor="@color/red"
             android:textStyle="bold"
             android:textSize="20sp"
             android:gravity="end" />
         <TextView
-            android:id="@+id/txt_Thanhtoan"
+            android:id="@+id/txt_Totalcost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/mainbutton"
-            android:textColor="@color/black"
+            android:background="@color/theme"
+            android:textColor="@color/red"
             android:paddingEnd="10dp"
             android:text="250.000 D"
             android:textSize="20sp"
             android:gravity="end" />
     </LinearLayout>
-
 
     <Button
         android:id="@+id/btn_DatHang"
