--- a/app/src/main/res/layout/activity_wishlist.xml
+++ b/app/src/main/res/layout/activity_wishlist.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:context=".WishlistActivity">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
         android:background="@color/mainbutton">
+
         <ImageButton
             android:id="@+id/btnBack"
             android:layout_width="wrap_content"
@@ -17,6 +19,7 @@
             android:layout_alignParentStart="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@mipmap/back" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -33,6 +36,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="75dp" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationmenu"
         android:layout_width="match_parent"
@@ -40,6 +44,6 @@
         app:itemTextColor="@color/bottom_nav_style"
         app:itemIconTint="@color/bottom_nav_style"
         app:menu="@menu/bottom_nav_menu"
-        android:layout_gravity="end|bottom"/>
+        android:layout_gravity="end|bottom" />
 
 </FrameLayout>
